@@ -20,6 +20,17 @@ run(int argc, char* argv[], const Ice::CommunicatorPtr& communicator)
     Ice::ObjectPtr object = new MyDerivedClassI(adapter, Ice::stringToIdentity("test"));
     adapter->add(object, Ice::stringToIdentity("test"));
     adapter->activate();
+
+    //
+    // Make a separate adapter with a servant locator. We use this to test
+    // that ::Ice::Context is correctly passed to checkedCast() operation.
+    //
+    communicator->getProperties()->setProperty("CheckedCastAdapter.Endpoints", "default -p 12346 -t 10000");
+    adapter = communicator->createObjectAdapter("CheckedCastAdapter");
+    Ice::ServantLocatorPtr checkedCastLocator = new CheckedCastLocator();
+    adapter->addServantLocator(checkedCastLocator, "");
+    adapter->activate();
+
     communicator->waitForShutdown();
     return EXIT_SUCCESS;
 }
