@@ -359,3 +359,40 @@ void
 MyDerivedClassI::opDerived(const Ice::Current&)
 {
 }
+
+::Ice::Context
+TestCheckedCastI::getContext(const Ice::Current& c)
+{
+    return _ctx;
+}
+
+void
+TestCheckedCastI::setContext(const Ice::Context& ctx)
+{
+    _ctx = ctx;
+}
+
+CheckedCastLocator::CheckedCastLocator()
+{
+    _servant = new TestCheckedCastI;
+}
+
+Ice::ObjectPtr
+CheckedCastLocator::locate(const Ice::Current& c, Ice::LocalObjectPtr&)
+{
+    if(c.operation == "ice_isA")
+    {
+	_servant->setContext(c.ctx);
+    }
+    return _servant;
+}
+
+void
+CheckedCastLocator::finished(const ::Ice::Current&, const ::Ice::ObjectPtr&, const ::Ice::LocalObjectPtr&)
+{
+}
+
+void
+CheckedCastLocator::deactivate(const ::std::string&)
+{
+}
