@@ -160,4 +160,31 @@ private:
     Ice::Identity _identity;
 };
 
+class TestCheckedCastI : public Test::TestCheckedCast
+{
+public:
+
+    virtual Ice::Context getContext(const Ice::Current&);
+    void setContext(const Ice::Context& c);
+
+private:
+    Ice::Context _ctx;
+};
+
+typedef IceUtil::Handle<TestCheckedCastI> TestCheckedCastIPtr;
+
+class CheckedCastLocator : public Ice::ServantLocator
+{
+public:
+
+    CheckedCastLocator();
+    virtual Ice::ObjectPtr locate(const Ice::Current& c, Ice::LocalObjectPtr&);
+    virtual void finished(const Ice::Current&, const Ice::ObjectPtr&, const Ice::LocalObjectPtr&);
+    virtual void deactivate(const ::std::string&);
+
+private:
+
+    TestCheckedCastIPtr _servant;
+};
+
 #endif
