@@ -1,6 +1,11 @@
 Changes since version 2.0.0
 ---------------------------
 
+- Overloaded the checkedCast member function of the generated Prx classes
+  to allow a trailing argument of type ::Ice::Context. This makes
+  it possible to do stateful things that require a context in a
+  servant locator's activate() method.
+
 - Added catalogs for Freeze: each database environment used by Freeze
   now contains a special dictionary (named __catalog) that keeps track 
   of all evictor and dictionary databases in this environment.
